Escrito o codigo base (esqueleto) da página.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Jeferson Ferreira
+<html>
+<head>
+	<title>JF Resume</title>
+</head>
+<body>
+	<div class="conteudo">
+		<header>
+			<h1></h1>
+			<p></p>
+		</header>
+		<nav>
+		</nav>
+		<div class="corpo">
+			<section>
+				<article>
+					<h2></h2>
+					<p></p>
+				</article>
+			</section>
+		</div>
+	</div>
+</body>
+</html>
