--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 	<title>JF Resume</title>
@@ -5,16 +6,16 @@
 <body>
 	<div class="conteudo">
 		<header>
-			<h1></h1>
-			<p></p>
+			<h1>Meus links</h1>
+			<p>Projetos e Favoritos</p>
 		</header>
 		<nav>
 		</nav>
 		<div class="corpo">
 			<section>
 				<article>
-					<h2></h2>
-					<p></p>
+					<h2>Projeto de Estudos 1 (HTML5 e CSS3)</h2>
+					<p><a href="https://jeferson0993.github.io/ProjetoDeEstudos1">Clique aqui</a></p>
 				</article>
 			</section>
 		</div>
