--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<div class="corpo">
 			<section>
 				<article>
-					<h2>Projeto de Estudos 1 (HTML5 e CSS3)</h2>
-					<p><a href="https://jeferson0993.github.io/ProjetoDeEstudos1">Clique aqui</a></p>
+					<h2>Projeto de Estudo 1 (HTML5 e CSS3)</h2>
+					<p>Para ver meu primeiro projeto <a href="https://jeferson0993.github.io/ProjetoDeEstudo1">clique aqui</a>.</p>
 				</article>
 			</section>
 		</div>
