Criado o menu conforme prototipagem.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html>
 <head>
 	<title>JF Resume</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="conteudo">
 		<header>
-			<h1>Meus links</h1>
-			<p>Projetos e Favoritos</p>
+			<nav>
+				<ul>
+					<li>
+						<a href="#inicio">Inicio</a>
+					</li>
+					<li>
+						<a href="#sobre">Sobre</a>
+					</li>
+					<li>
+						<a href="#projetos">Projetos</a>
+					</li>
+					<li>
+						<a href="#contato">Contato</a>
+					</li>
+					<li style="float:right">
+						<a class="destaque" href="#redesSociais">Redes Sociais</a>
+					</li>					
+				</ul>
+			</nav>
+			<h1>Meus Projetos</h1>
+			<p>por Jeferson Ferreira</p>
+			<a href="#sobre">Saiba Mais</a>
 		</header>
 		<nav>
 		</nav>
