--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<nav>
 		</nav>
 		<div class="corpo">
-			<section>
+			<section id="inicio">
 				<article>
 					<h2>Projeto de Estudo 1 (HTML5 e CSS3)</h2>
 					<p>Para ver meu primeiro projeto <a href="https://jeferson0993.github.io/ProjetoDeEstudo1">clique aqui</a>.</p>
@@ -45,6 +45,17 @@
 					</p>
 				</article>
 			</section>
+			<section id="sobre">
+				<h2>Sobre</h2>
+			</section>
+			<section id="projetos">
+				<h2>Projetos</h2>
+			</section>
+			<section id="contato">
+				<h2>Contato</h2>
+			</section>
+			<footer id=redesSociais>
+			</footer>
 		</div>
 	</div>
 </body>
