Adicionado imagens dos projetos, alterado desine da secção de projetos. Corrigido problemas no menu versão mobile e adicionado mais codigos de responsividade;

--- a/index.html
+++ b/index.html
@@ -1,121 +1,139 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="PT-BR">
 
 <head>
   <meta charset="UTF-8">
-  <title>{ Prototipo } Meu Site Pessoal</title>
+  <title>Jeferson</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-  <header>
-    <nav>
-      <ul>
+  <header id="inicio">
+    <nav class='cf'>
+      <ul class='cf'>
         <li>
-          <a href="#inicio">Inicio</a>
+          <a href='#inicio'>INICIO</a>
         </li>
         <li>
-          <a href="#sobre">Sobre</a>
+          <a href='#sobre'>SOBRE</a>
         </li>
         <li>
-          <a href="#projetos">Projetos</a>
+          <a href='#projetos'>PROJETOS</a>
         </li>
         <li>
-          <a href="#contato">Contato</a>
+          <a href='#contatos'>CONTATO</a>
         </li>
-        <li style="float:right">
-          <a class="destaque" href="#redesSociais">Redes Sociais</a>
+        <li>
+          <a href='#footer'>REDES SOCIAIS</a>
         </li>
       </ul>
+      <a href='#' id='openup'>MENU</a>
     </nav>
-    <section id="SectionTituloPrincipal">
+    <div>
       <h1>Meus Projetos</h1>
-      <p>por Jeferson Ferreira</p>
-      <a href="#sobre">
-        <button class="destaque">
-          Saiba Mais
-        </button>
+      <p>
+        <a href="#">por Jeferson Ferreira</a>
+      </p>
+      <a href="#projetos">
+        <button>Projetos</button>
       </a>
-    </section>
+    </div>
   </header>
 
   <main>
     <section id="sobre">
       <h2>Sobre</h2>
-      <h3>Jeferson Ferreira</h3>
-      <a href="https://github.com/jeferson0993"><p>[Github]</p></a>
-      <a href="https://codepen.io/jeferson0993/full/gZvmeb"><p>[Codepen]</p></a>
-      <a href="https://www.linkedin.com/in/jeferson-ferreira-4a036b143"><p>[linkedin]</p></a>
-      <a href="mailto:jeferson@ferreirasilva.ml"><p>jeferson@ferreirasilva.ml</p></a>
-
-
     </section>
     <section id="projetos">
       <h2>Projetos</h2>
-      <article>
-        <div class="timeline">
-          <div class="container left">
-            <div class="content">
-              <h2>Site em html5 e css3</h2>
-              <picture>
-                <img src="imagens/ProjetoDeEstudo1.png" alt="Projeto De Estudo 1" srcset="">
-              </picture>
-              <p>Para ver meu primeiro projeto <a href="https://jeferson0993.github.io/ProjetoDeEstudo1">clique aqui</a>.</p>
-            </div>
-          </div>
-          <div class="container right">
-            <div class="content">
-              <h2>Sistema totalmente funcional com as técnologias básicas de implementação</h2>
-              <picture>
-                <img src="imagens/ProjetoDeEstudo2.png" alt="Projeto De Estudo 2" srcset="">
-              </picture>
-              <p>Para ver meu segundo projeto <a href="https://jeferson0993.github.io/ProjetoDeEstudo2">clique aqui</a>.</p>
-            </div>
-          </div>
-          <div class="container left">
-            <div class="content">
-              <h2>Calculadora básica</h2>
-              <picture>
-                <img src="imagens/Calculadora.png" alt="Calculadora" srcset="">
-              </picture>
-              <p>Para ver meu projeto <a href="https://jeferson0993.github.io/Calculadora">clique aqui</a>.</p>
-            </div>
-          </div>
-          <div class="container right">
-            <div class="content">
-              <h2>TODO List</h2>
-              <picture>
-                <img src="imagens/TodoList.png" alt="TodoList" srcset="">
-              </picture>
-              <p>Para ver meu projeto <a href="https://github.com/jeferson0993/todoList">clique aqui</a>.</p>
-            </div>
-          </div>
-          <div class="container left">
-            <div class="content">
-              <h2>Projeto</h2>
-              <p>Para ver meu projeto <a href="#">clique aqui</a>.</p>
-            </div>
-          </div>
-          <div class="container right">
-            <div class="content">
-              <h2>Projeto</h2>
-              <p>Para ver meu projeto <a href="#">clique aqui</a>.</p>
-            </div>
-          </div>
-        </div>
-      </article>
+      <div>
+        <article>
+          <h3>Single Page</h3>
+          <picture>
+            <img src="imagens/ProjetoDeEstudo1.png">
+            <figcaption>com html5 e css3</figcaption>
+          </picture>
+          <p>
+            <a href=""></a>
+          </p>
+        </article>
+        <article>
+          <h3>Calculadora básica</h3>
+          <picture>
+            <img src="imagens/Calculadora.png">
+            <figcaption>com javascript</figcaption>
+          </picture>
+          <p>
+            <a href=""></a>
+          </p>
+        </article>
+      </div>
+      <div>
+        <article>
+          <h3>TO DO LIST</h3>
+          <p>Lista de tarefas</p>
+          <picture>
+            <img src="imagens/TodoList.png">
+            <figcaption>HTML5, CSS3 e JAVASCRIPT</figcaption>
+          </picture>
+          <p>
+            <a href=""></a>
+          </p>
+        </article>
+        <article>
+          <h3>Cadastro e Login em PHP</h3>
+          <picture>
+            <img src="imagens/prototipoLoginPhpMysql.png">
+            <figcaption>Projeto cadastro e login com PHP e MYSQL</figcaption>
+          </picture>
+          <p>
+            <a href=""></a>
+          </p>
+        </article>
+      </div>
+      <div>
+        <article>
+          <h3>Sistema completo em PHP</h3>
+          <picture>
+            <img src="imagens/ProjetoDeEstudo2.png">
+            <figcaption>Sistema totalmente funcional com as técnologias básicas de implementação</figcaption>
+          </picture>
+          <p>
+            <a href=""></a>
+          </p>
+        </article>
+        <article>
+          <h3>Sistema de cadastro de consultas em JAVA</h3>
+          <picture>
+            <img src="imagens/SistemaHospital.png">
+            <figcaption>APLICAÇÃO JAVA WEB DESENVOLVIDA NA ARQUITETURA MVC</figcaption>
+          </picture>
+          <p>
+            <a href=""></a>
+          </p>
+        </article>
+      </div>
     </section>
-    <section id="contato">
-      <h2>Contato</h2>
+    <section id="contatos">
+      <h2>Contatos</h2>
     </section>
   </main>
-  <footer id=redesSociais>
 
+  <footer id="footer">
+    <p>JEFERSON FERREIRA</p>
+    <p>
+      <a href="https://github.com/jeferson0993"> GIT HUB </a> - | -
+      <a href="https://www.linkedin.com/in/jeferson-ferreira-4a036b143"> LINKEDIN </a> - | -
+      <a href="https://codepen.io/jeferson0993"> CODEPEN </a>
+    </p>
+    <p>Portifólio Web app - Jeferson &copy; 2019</p>
   </footer>
 
-
-
 </body>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="js/index.js"></script>
 
 </html>
