--- a/index.html
+++ b/index.html
@@ -102,13 +102,30 @@
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="#" target="_blank">Sistema de cadastro de consultas</a></h3>
                                     <p class="mb-2">Esta é uma aplicação Java Web desenvolvida na arquitetura MVC e é composta das funções Logar, Armazenar informações do usuário em cookies, Listar Consultas marcadas, Criar Consultas, Editar Consultas , Excluir Consultas.
-                                        O projeto tem o objetivo de demostrar habilidadedes nas tecnologias, JSP, Servlets, JDBC, HTML 5, CSS 3, javascript. Os padrões de projeto utilizados na aplicação são: MVC, Maven e DAO; É um sistema em nivel iniciante
+                                        O projeto tem o objetivo de demostrar habilidadedes nas tecnologias, JSP, Servlets, JDBC, HTML 5, CSS 3, javascript. Os padrões de projeto utilizados na aplicação são: MVC, Maven e DAO; É um sistema em nível iniciante
                                         no desenvolvimento java para web.</p>
                                     <p class="row">
                                         <a class="more-link col-6" href="#" target="_blank"><i class="fas fa-external-link-alt"></i>Código</a>
                                         <a class="more-link col-6" href="#" target="_blank"><i class="fas fa-external-link-alt"></i>Demonstração</a>
                                     </p>
                                 </div>
+                                <!--//desc-->
+                            </div>
+                            <!--//item-->
+                            <div class="item row">
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="https://jeferson0993.000webhostapp.com/loginphpmysql/" target="_blank">Sistema de Cadastro e Login em PHP</a></h3>
+                                    <p class="mb-2">Esta é uma aplicação Web desenvolvida em PHP. O projeto tem o objetivo de demostrar habilidadedes nas tecnologias, PHP, DBO, HTML 5, CSS 3 e javascript. É um sistema em nível iniciante no desenvolvimento para web com
+                                        php.
+                                    </p>
+                                    <p class="row">
+                                        <a class="more-link col-6" href="https://github.com/jeferson0993/sistemaCadastroLoginPHP-MySQL" target="_blank"><i class="fas fa-external-link-alt"></i>Código</a>
+                                        <a class="more-link col-6" href="https://jeferson0993.000webhostapp.com/loginphpmysql/" target="_blank"><i class="fas fa-external-link-alt"></i>Demonstração</a>
+                                    </p>
+                                </div>
+                                <a class="col-md-4 col-12" href="#" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/images/projects/project-1.jpeg" alt="nome do projeto" />
+                                </a>
                                 <!--//desc-->
                             </div>
                             <!--//item-->
@@ -122,6 +139,7 @@
                 <section class="projects section">
                     <div class="section-inner">
                         <h2 class="heading">Outros Projetos</h2>
+                        <h5 class="title">Apps Android:</h5>
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank">Aplicativo Sistemas da depressão</a> <span class="badge badge-theme">Android</span></h3>
@@ -136,8 +154,16 @@
                                 </div>
                             </div>
                             <!--//item-->
-
-
+                            <div class="item">
+                                <h3 class="title"><a href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank">Aplicativo Me Salva!</a> <span class="badge badge-theme">Android</span></h3>
+                                <p class="summary">Um aplicativo para salvar anotações e lembretes de conteúdos para alunos do campus IFTO-Palmas.</p>
+                                <div class="row">
+                                    <div class="col-6 text-center">
+                                        <a class="btn btn-cta-primary btn-download" href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--//item-->
 
                         </div>
                         <!--//content-->
@@ -151,7 +177,7 @@
                         <h2 class="heading">Cursos</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">web Developer - <span class="place"><a href="#">40 Hrs</a></span> <span class="year">(20XY - Presencial</span></h3>
+                                <h3 class="title">web Developer - <span class="place"><a href="#">40 Hrs</a></span> <span class="year"> 20XY - Presencial</span></h3>
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis
                                     faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                             </div>
@@ -188,7 +214,7 @@
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Localização:</span>Palmas, TO - Brasil</li>
                                 <li><i class="fas fa-envelope"></i><a href="#">jeferson0993@gmail.com</a></li>
-                                <li><i class="fas fa-link"></i><a href="#">www.Jeferson.ml</a></li>
+                                <li><i class="fas fa-link"></i><a href="http://www.Jeferson.ml" target="_blank">www.Jeferson.ml</a></li>
                             </ul>
                         </div>
                         <!--//content-->
@@ -271,7 +297,7 @@
 
                 <aside class="languages aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Linguas</h2>
+                        <h2 class="heading">Línguas</h2>
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li class="item">
