adicionadas algumas imagems e svgs no site.

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                                 <h3 class="title"><a href="https://www.simemap.com" target="_blank">Simemap</a></h3>
                                 <p class="summary">Sistema de monitoramento eletrônico: medição e automação de processos</p>
                                 <div class="featured-image has-ribbon">
-                                    <a href="#" target="_blank">
-                                        <img class="img-fluid project-image" src="assets/images/projects/project-featured.jpg" alt="project name" />
+                                    <a href="https://www.simemap.com" target="_blank">
+                                        <img class="img-fluid project-image" src="assets/images/projects/simemap.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">Confira!</div>
@@ -97,7 +97,7 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="#" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/project-1.jpeg" alt="nome do projeto" />
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_windows_q9m0.svg" alt="nome do projeto" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="#" target="_blank">Sistema de cadastro de consultas</a></h3>
@@ -124,7 +124,7 @@
                                     </p>
                                 </div>
                                 <a class="col-md-4 col-12" href="#" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/project-1.jpeg" alt="nome do projeto" />
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_tabs_jf82.svg" alt="nome do projeto" />
                                 </a>
                                 <!--//desc-->
                             </div>
@@ -141,27 +141,40 @@
                         <h2 class="heading">Outros Projetos</h2>
                         <h5 class="title">Apps Android:</h5>
                         <div class="content">
-                            <div class="item">
-                                <h3 class="title"><a href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank">Aplicativo Sistemas da depressão</a> <span class="badge badge-theme">Android</span></h3>
-                                <p class="summary">Um aplicativo que reune, em um só lugar, os sistemas mais utilizados pelos alunos do campus IFTO-Palmas no dia-a-dia.</p>
-                                <div class="row">
-                                    <div class="col-6 text-center">
-                                        <a class="btn btn-cta-primary btn-download" href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</i></a>
-                                    </div>
-                                    <div class="col-6 text-center">
-                                        <a class="btn btn-cta-secondary" href="https://jeferson0993.github.io/semNomePorEnquanto/" target="_blank"><i class="fas fa-globe"></i>Versão web</a>
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="#" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_android_gree.svg" alt="nome do projeto" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank">Aplicativo Sistemas da depressão</a> <span class="badge badge-theme">Android</span></h3>
+                                    <p class="summary">Um aplicativo que reune, em um só lugar, os sistemas mais utilizados pelos alunos do campus IFTO-Palmas no dia-a-dia.</p>
+                                    <div class="row">
+                                        <div class="col-6 text-center">
+                                            <a class="btn btn-cta-primary btn-download" href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</i></a>
+                                        </div>
+                                        <div class="col-6 text-center">
+                                            <a class="btn btn-cta-secondary" href="https://jeferson0993.github.io/semNomePorEnquanto/" target="_blank"><i class="fas fa-globe"></i>Versão web</a>
+                                        </div>
                                     </div>
                                 </div>
+                                <!--//desc-->
                             </div>
                             <!--//item-->
-                            <div class="item">
-                                <h3 class="title"><a href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank">Aplicativo Me Salva!</a> <span class="badge badge-theme">Android</span></h3>
-                                <p class="summary">Um aplicativo para salvar anotações e lembretes de conteúdos para alunos do campus IFTO-Palmas.</p>
-                                <div class="row">
-                                    <div class="col-6 text-center">
-                                        <a class="btn btn-cta-primary btn-download" href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</i></a>
+                            <hr class="divider" />
+                            <div class="item row">
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank">Aplicativo Me Salva!</a> <span class="badge badge-theme">Android</span></h3>
+                                    <p class="summary">Um aplicativo para salvar anotações e lembretes de conteúdos para alunos do campus IFTO-Palmas.</p>
+                                    <div class="row">
+                                        <div class="col-6 text-center">
+                                            <a class="btn btn-cta-primary btn-download" href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</i></a>
+                                        </div>
                                     </div>
                                 </div>
+                                <a class="col-md-4 col-12" href="#" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_android_jr64.svg" alt="nome do projeto" />
+                                </a>
+                                <!--//desc-->
                             </div>
                             <!--//item-->
 
@@ -175,13 +188,13 @@
                 <section class="experience section">
                     <div class="section-inner">
                         <h2 class="heading">Cursos</h2>
-                        <div class="content">
-                            <div class="item">
+                        <div class="content row">
+                            <div class="item col-8">
                                 <h3 class="title">web Developer - <span class="place"><a href="#">40 Hrs</a></span> <span class="year"> 20XY - Presencial</span></h3>
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis
                                     faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                             </div>
-
+                            <img src="assets/images/projects/undraw_Graduation_ktn0.svg" alt="" srcset="" class="col-4">
                         </div>
                         <!--//content-->
                     </div>
@@ -190,12 +203,18 @@
                 <!--//section-->
                 <section class="github section">
                     <div class="section-inner">
-                        <h2 class="heading">Meu GitHub</h2>
-                        <p>Este é meu grafico de calendário de contribuições no GitHub:</p>
+                        <div class="content row">
+                            <div class="item col-8">
+                                <h3 class="title">Este é meu grafico de calendário de contribuições no GitHub:</h3>
+                            </div>
+                            <img src="assets/images/projects/undraw_developer_activity_bv83.svg" alt="" srcset="" class="col-4">
+                        </div>
+
+                        <hr class="divider" />
+
                         <div id="github-graph" class="github-graph"></div>
                         <!--//github-graph-->
 
-                        <p>Este é meu histórico de contribuições no GitHub: </p>
                         <!--//Usage: https://caseyscarborough.com/projects/github-activity/ -->
                         <div id="ghfeed" class="ghfeed"></div>
                         <!--//ghfeed-->
