--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                         remotamente lâmpadas, máquinas, aparelhos de ar condicionado entre outros. Tudo pelo seu PC ou pelo seu celular.</p>
                                 </div>
                                 <!--//desc-->
-                                <a class="btn btn-cta-secondary" href="http://www.simemap.com" target="_blank"><i class="fas fa-globe"></i> Site do projeto</a>
+                                <a class="btn btn-cta-secondary" href="http://www.simemap.com" target="_blank"><i class="fas fa-external-link-alt"></i> Site do projeto</a>
                             </div>
                             <!--//item-->
                             <hr class="divider" />
@@ -105,8 +105,8 @@
                                         O projeto tem o objetivo de demostrar habilidadedes nas tecnologias, JSP, Servlets, JDBC, HTML 5, CSS 3, javascript. Os padrões de projeto utilizados na aplicação são: MVC, Maven e DAO; É um sistema em nível iniciante
                                         no desenvolvimento java para web.</p>
                                     <p class="row">
-                                        <a class="more-link col-6" href="https://github.com/jeferson0993/Sistema-cadastro-consulta-hospital" target="_blank"><i class="fas fa-external-link-alt"></i>Código</a>
-                                        <a class="more-link col-6" href="https://sistema-consulta-hospital.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i>Demonstração</a>
+                                        <a class="more-link col-6" href="https://github.com/jeferson0993/Sistema-cadastro-consulta-hospital" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-6" href="https://sistema-consulta-hospital.herokuapp.com/" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
                                 <!--//desc-->
@@ -119,8 +119,8 @@
                                         php.
                                     </p>
                                     <p class="row">
-                                        <a class="more-link col-6" href="https://github.com/jeferson0993/sistemaCadastroLoginPHP-MySQL" target="_blank"><i class="fas fa-external-link-alt"></i>Código</a>
-                                        <a class="more-link col-6" href="https://jeferson0993.000webhostapp.com/loginphpmysql/" target="_blank"><i class="fas fa-external-link-alt"></i>Demonstração</a>
+                                        <a class="more-link col-6" href="https://github.com/jeferson0993/sistemaCadastroLoginPHP-MySQL" target="_blank"><i class="fas fa-file-code"></i> Código</a>
+                                        <a class="more-link col-6" href="https://jeferson0993.000webhostapp.com/loginphpmysql/" target="_blank"><i class="fas fa-external-link-alt"></i> Demonstração</a>
                                     </p>
                                 </div>
                                 <a class="col-md-4 col-12" href="#" target="_blank">
@@ -146,7 +146,7 @@
                                     <img class="img-fluid project-image" src="assets/images/projects/undraw_android_gree.svg" alt="nome do projeto" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank">Aplicativo Sistemas da depressão</a> <span class="badge badge-theme">Android</span></h3>
+                                    <h3 class="title"><a href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank"><i class="fab fa-android"></i> Aplicativo Sistemas da depressão</a> <span class="badge badge-theme">Android</span></h3>
                                     <p class="summary">Um aplicativo que reune, em um só lugar, os sistemas mais utilizados pelos alunos do campus IFTO-Palmas no dia-a-dia.</p>
                                     <div class="row">
                                         <div class="col-6 text-center">
@@ -163,7 +163,7 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank">Aplicativo Me Salva!</a> <span class="badge badge-theme">Android</span></h3>
+                                    <h3 class="title"><a href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank"><i class="fab fa-android"></i> Aplicativo Me Salva!</a> <span class="badge badge-theme">Android</span></h3>
                                     <p class="summary">Um aplicativo para salvar anotações e lembretes de conteúdos para alunos do campus IFTO-Palmas.</p>
                                     <div class="row">
                                         <div class="col-6 text-center">
@@ -205,7 +205,7 @@
                     <div class="section-inner">
                         <div class="content row">
                             <div class="item col-8">
-                                <h3 class="title">Este é meu grafico de calendário de contribuições no GitHub:</h3>
+                                <h3 class="title"><i class="fas fa-code-branch"></i> Este é meu grafico de calendário de contribuições no GitHub (<i class="fab fa-github"></i>):</h3>
                             </div>
                             <img src="assets/images/projects/undraw_developer_activity_bv83.svg" alt="" srcset="" class="col-4">
                         </div>
@@ -252,7 +252,7 @@
                             <div class="skillset">
 
                                 <div class="item">
-                                    <h3 class="level-title">Java<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Java estudado durante o curso como principal linguagem de programação"><i class="fas fa-info-circle"></i>Info</span></h3>
+                                    <h3 class="level-title"><i class="fab fa-java"></i> Java<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Java estudado durante o curso como principal linguagem de programação"><i class="fas fa-info-circle"></i>Info</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="68%">
                                         </div>
@@ -262,7 +262,7 @@
                                 <!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Javascript &amp; jQuery</h3>
+                                    <h3 class="level-title"><i class="fab fa-node-js"></i> Javascript &amp; jQuery <i class="fab fa-js"></i></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="34%">
                                         </div>
@@ -272,7 +272,7 @@
                                 <!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">HTML5, CSS3, &amp; LESS</h3>
+                                    <h3 class="level-title"><i class="fab fa-html5"></i> HTML5 &amp; CSS3 <i class="fab fa-css3"></i></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="27%">
                                         </div>
@@ -282,7 +282,7 @@
                                 <!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Python &amp; PHP</h3>
+                                    <h3 class="level-title"><i class="fab fa-php"></i> PHP &amp; Python <i class="fab fa-python"></i></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="51%">
                                         </div>
@@ -316,7 +316,7 @@
 
                 <aside class="languages aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Línguas</h2>
+                        <h2 class="heading"><i class="fas fa-language"></i> Línguas</h2>
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li class="item">
