adicionado novas secoes de items em projetos, com imagems svgs. alterado o link para o email. corrigido responsividade de elementos das secoes cursos e historico github.

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <h2 class="desc">Web Developer</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/jeferson-ferreira-4a036b143"><i class="fab fa-linkedin-in"></i></a></li>
-                    <li class="list-inline-item"><a href="https://github.com/jeferson0993"><i class="fab fa-github-alt"></i></a></li>
-                    <li class="list-inline-item"><a href="https://stackexchange.com/users/16185650/jeferson-ferreira"><i class="fab fa-stack-overflow"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/jeferson0993"><i class="fab fa-github"></i></a></li>
                     <li class="list-inline-item last-item"><a href="https://codepen.io/jeferson0993"><i class="fab fa-codepen"></i></a></li>
+                    <li class="list-inline-item"><a href="https://stackexchange.com/users/16185650/jeferson-ferreira"><i class="fab fa-stack-overflow"></i></a></li>
                 </ul>
             </div>
             <!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="#"><i class="fas fa-paper-plane"></i> Entre em contato</a>
+            <!-- a class="btn btn-cta-primary float-right" href="#"><i class="fas fa-paper-plane"></i> Entre em contato</a -->
         </div>
         <!--//container-->
     </header>
@@ -105,13 +105,14 @@
                                         O projeto tem o objetivo de demostrar habilidadedes nas tecnologias, JSP, Servlets, JDBC, HTML 5, CSS 3, javascript. Os padrões de projeto utilizados na aplicação são: MVC, Maven e DAO; É um sistema em nível iniciante
                                         no desenvolvimento java para web.</p>
                                     <p class="row">
-                                        <a class="more-link col-6" href="https://github.com/jeferson0993/Sistema-cadastro-consulta-hospital" target="_blank"><i class="fas fa-code"></i>Código</a>
-                                        <a class="more-link col-6" href="https://sistema-consulta-hospital.herokuapp.com/" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
+                                        <a class="more-link col-5 text-center" href="https://github.com/jeferson0993/Sistema-cadastro-consulta-hospital" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="https://sistema-consulta-hospital.herokuapp.com/" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
                                 <!--//desc-->
                             </div>
                             <!--//item-->
+                            <hr class="divider" />
                             <div class="item row">
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="https://jeferson0993.000webhostapp.com/loginphpmysql/" target="_blank">Sistema de Cadastro e Login em PHP</a></h3>
@@ -119,12 +120,76 @@
                                         php.
                                     </p>
                                     <p class="row">
-                                        <a class="more-link col-6" href="https://github.com/jeferson0993/sistemaCadastroLoginPHP-MySQL" target="_blank"><i class="fas fa-file-code"></i> Código</a>
-                                        <a class="more-link col-6" href="https://jeferson0993.000webhostapp.com/loginphpmysql/" target="_blank"><i class="fas fa-external-link-alt"></i> Demonstração</a>
+                                        <a class="more-link col-5 text-center" href="https://github.com/jeferson0993/sistemaCadastroLoginPHP-MySQL" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="https://jeferson0993.000webhostapp.com/loginphpmysql/" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
                                 <a class="col-md-4 col-12" href="#" target="_blank">
                                     <img class="img-fluid project-image" src="assets/images/projects/undraw_tabs_jf82.svg" alt="nome do projeto" />
+                                </a>
+                                <!--//desc-->
+                            </div>
+                            <!--//item-->
+                            <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="#" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_online_page_cq94.svg" alt="nome do projeto" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="#" target="_blank">Sistema completo em PHP</a></h3>
+                                    <p class="mb-2"></p>
+                                    <p class="row">
+                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
+                                    </p>
+                                </div>
+                                <!--//desc-->
+                            </div>
+                            <!--//item-->
+                            <hr class="divider" />
+                            <div class="item row">
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="" target="_blank">Sistema de Cadastro e Login em PHP</a></h3>
+                                    <p class="mb-2"></p>
+                                    <p class="row">
+                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
+                                    </p>
+                                </div>
+                                <a class="col-md-4 col-12" href="#" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_real-time_sync_o57k.svg" alt="nome do projeto" />
+                                </a>
+                                <!--//desc-->
+                            </div>
+                            <!--//item-->
+                            <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="#" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_cloud_sync_2aph.svg" alt="nome do projeto" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="#" target="_blank">JavaScript Todo List com localStorage</a></h3>
+                                    <p class="mb-2"></p>
+                                    <p class="row">
+                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
+                                    </p>
+                                </div>
+                                <!--//desc-->
+                            </div>
+                            <!--//item-->
+                            <hr class="divider" />
+                            <div class="item row">
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="" target="_blank">Sistema de Cadastro e Login em PHP</a></h3>
+                                    <p class="mb-2"></p>
+                                    <p class="row">
+                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
+                                    </p>
+                                </div>
+                                <a class="col-md-4 col-12" href="#" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_responsive_6c8s.svg" alt="nome do projeto" />
                                 </a>
                                 <!--//desc-->
                             </div>
@@ -150,10 +215,10 @@
                                     <p class="summary">Um aplicativo que reune, em um só lugar, os sistemas mais utilizados pelos alunos do campus IFTO-Palmas no dia-a-dia.</p>
                                     <div class="row">
                                         <div class="col-6 text-center">
-                                            <a class="btn btn-cta-primary btn-download" href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</i></a>
+                                            <a class="btn btn-cta-primary btn-download" href="https://sites.google.com/view/app-inventor2231436/p%C3%A1gina-inicial" target="_blank">Baixe o aplicativo</a>
                                         </div>
                                         <div class="col-6 text-center">
-                                            <a class="btn btn-cta-secondary" href="https://jeferson0993.github.io/semNomePorEnquanto/" target="_blank"><i class="fas fa-globe"></i>Versão web</a>
+                                            <a class="btn btn-cta-secondary" href="https://jeferson0993.github.io/semNomePorEnquanto/" target="_blank">Versão web</a>
                                         </div>
                                     </div>
                                 </div>
@@ -166,8 +231,8 @@
                                     <h3 class="title"><a href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank"><i class="fab fa-android"></i> Aplicativo Me Salva!</a> <span class="badge badge-theme">Android</span></h3>
                                     <p class="summary">Um aplicativo para salvar anotações e lembretes de conteúdos para alunos do campus IFTO-Palmas.</p>
                                     <div class="row">
-                                        <div class="col-6 text-center">
-                                            <a class="btn btn-cta-primary btn-download" href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</i></a>
+                                        <div class="col-12 text-center">
+                                            <a class="btn btn-cta-primary btn-download" href="https://drive.google.com/drive/folders/1sfLhRM-iYjJguuMlXBFRoctpM5vGRZ27" target="_blank"><i class="fas fa-download"></i>Baixe o aplicativo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -189,12 +254,12 @@
                     <div class="section-inner">
                         <h2 class="heading">Cursos</h2>
                         <div class="content row">
-                            <div class="item col-8">
+                            <div class="item col-md-8 col-12">
                                 <h3 class="title">web Developer - <span class="place"><a href="#">40 Hrs</a></span> <span class="year"> 20XY - Presencial</span></h3>
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis
                                     faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                             </div>
-                            <img src="assets/images/projects/undraw_Graduation_ktn0.svg" alt="" srcset="" class="col-4">
+                            <img src="assets/images/projects/undraw_Graduation_ktn0.svg" alt="" srcset="" class="col-md-4 col-12">
                         </div>
                         <!--//content-->
                     </div>
@@ -204,10 +269,10 @@
                 <section class="github section">
                     <div class="section-inner">
                         <div class="content row">
-                            <div class="item col-8">
+                            <div class="item col-md-8 col-12">
                                 <h3 class="title"><i class="fas fa-code-branch"></i> Este é meu grafico de calendário de contribuições no GitHub (<i class="fab fa-github"></i>):</h3>
                             </div>
-                            <img src="assets/images/projects/undraw_developer_activity_bv83.svg" alt="" srcset="" class="col-4">
+                            <img src="assets/images/projects/undraw_developer_activity_bv83.svg" alt="" srcset="" class="col-md-4 col-12">
                         </div>
 
                         <hr class="divider" />
@@ -232,7 +297,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Localização:</span>Palmas, TO - Brasil</li>
-                                <li><i class="fas fa-envelope"></i><a href="#">jeferson0993@gmail.com</a></li>
+                                <li><i class="fas fa-envelope"></i><a href="mailto: jeferson0993@gmail.com">jeferson0993@gmail.com</a></li>
                                 <li><i class="fas fa-link"></i><a href="http://www.Jeferson.ml" target="_blank">www.Jeferson.ml</a></li>
                             </ul>
                         </div>
